Improve mantissa fitting docs and add iterator/fitter tests (#695)
* refactor: guard AbstractCurveFitter serialization

* docs: expand F2FP2Iterator Javadoc

* chore: document FFPIterator and include tests

* test: add HarmonicCoefficientsGuesser tests

* docs: improve HarmonicFitter documentation

* refactor: encapsulate polynomial coefficient degree

* fix: validate polynomial fitter parameters